--- a/DYMongodbApiServer/DYMongodbApiServer/bin/DYMongodbApiServer.dll.config
+++ b/DYMongodbApiServer/DYMongodbApiServer/bin/DYMongodbApiServer.dll.config
@@ -9,8 +9,11 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="false" />
+    <modules>
+      <remove name="WebDAVModule" />
+    </modules>
     <handlers>
+      <remove name="WebDAV" />
       <remove name="ExtensionlessUrl-Integrated-4.0" />
       <add name="ExtensionlessUrl-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,DELETE,PUT" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
